--- a/financeweb/templates/home.html
+++ b/financeweb/templates/home.html
@@ -135,7 +135,8 @@ display: block;
     padding-top: 90px;
     height: 0;
     overflow: hidden;
-    margin-left: -200px;
+    margin-left: 10px;
+    margin-top: 150px;
 }
 
 .video-container iframe,  
@@ -156,15 +157,15 @@ display: block;
 
 <h1>Finance Web Application</h1>
 
-<h2>hello start ups</h2>
+<h2>Hello Start Ups</h2>
+
 <div class="first">
+ 
  <a href="signup" class="button">Sign Up</a>
- <br></br>
- <a href="" class="button">OurFeatures</a>
- <br></br>
- <a href="" class="button1">OurApp</a>
- <br></br>
-  <a href="" class="button2">MyProjects</a>
+ <a href="" class="button">Our Features</a>
+ <a href="" class="button">Our App</a>
+ <hr>
+  
   <br></br>
   <link href="hello.css" rel="stylesheet">
    
