--- a/financeweb/templates/homepage2.html
+++ b/financeweb/templates/homepage2.html
@@ -13,6 +13,8 @@
             <h1>Home Page</h1>
 
             <a href="">My Account</a>
+            <br></br>
+            <a href="myprojects">My Projects</a> <br>
 
             </body>
 
