updated home with feed and video

--- a/financeweb/templates/home.html
+++ b/financeweb/templates/home.html
@@ -28,6 +28,19 @@ h2 {
   color: #bbbbbb;
   margin: 0px 0 70px 0;
 }
+
+h3 {
+  position: absolute;
+  left: 50px;
+  top: 850px;
+  
+}
+
+h4{
+  position: absolute;
+  left: 575px;
+  top: 848px;
+}
 p {
   color: rgba(255,255,255,1);
   background: black;
@@ -135,8 +148,7 @@ display: block;
     padding-top: 90px;
     height: 0;
     overflow: hidden;
-    margin-left: 10px;
-    margin-top: 150px;
+    margin-left: -200px;
 }
 
 .video-container iframe,  
@@ -157,41 +169,29 @@ display: block;
 
 <h1>Finance Web Application</h1>
 
-<h2>Hello Start Ups</h2>
-
+<h2>hello start ups</h2>
 <div class="first">
- 
  <a href="signup" class="button">Sign Up</a>
- <a href="" class="button">Our Features</a>
- <a href="" class="button">Our App</a>
- <hr>
-  
+ <br></br>
+ <a href="" class="button">OurFeatures</a>
+ <br></br>
+ <a href="" class="button1">OurApp</a>
+ <br></br>
+  <a href="" class="button2">MyProjects</a>
   <br></br>
   <link href="hello.css" rel="stylesheet">
    
-
-
-</div>
-<div class="video-container">
-<iframe src="http://player.vimeo.com/video/6284199?title=0&byline=0&portrait=0" width="800" height="450" frameborder="0"></iframe>
 </div>
 
-<div class="success">
-  
-  <h1>Success Stories</h1>
-  <p>
-  <br></br>
-  <br></br>
- <h1> BILL GATES<br/></h1>
-  Gates earned the majority of his vast fortune as one of the founders of Microsoft Corporation, where he served as CEO, chairman, and chief software architect. Gates was the largest individual shareholder of Microsoft.<br/>
-  FUN FACT : Bill Gates is 57 this year. If we assume that he will live for another 33 years, he has to spend $6 million per day to use up all of his wealth. <br/></h1>
-</p>
+<h3>
+<iframe src="http://embed.wistia.com/deliveries/a772b411b0d54939a4e8e906251d7b4838b19e63/file.mp4" width="500" height="450" frameborder="0"></iframe>
 
+</h3>
 
-</div>
-
-
-
+<h4>
+<iframe src="https://www.zawya.com/middle-east/financial-markets/egypt/" width="750" height="800">  
+</iframe>
+</h4>
 
 
 <script>
