Bahawel azabat haga

--- a/financeweb/templates/signup.html
+++ b/financeweb/templates/signup.html
@@ -12,7 +12,7 @@
 
             <h1>Join Now</h1>
 
-            <form method='POST' action='home'> {% csrf_token %}
+            <form method='POST' action='homepage2'> {% csrf_token %}
                 
                 <label>Email:</label>
                 <input type="email" name='email'>
