--- a/financeweb/templates/notauser.html
+++ b/financeweb/templates/notauser.html
@@ -18,9 +18,9 @@ body{
 
 	<p>You're either not signed in or not signed up</p>
 
-    <a href="">Click here</a> to sign in
+    <a href="login">Click here</a> to sign in
     <br></br>
-    <a href="">Click here</a> to sign up
+    <a href="register">Click here</a> to sign up
 
 
 </body>
