--- a/financeweb/templates/home.html
+++ b/financeweb/templates/home.html
@@ -92,7 +92,6 @@ h3{
 
 <hr>
 
-
 <div class="box">
 
 {% if user.is_authenticated %}
@@ -124,6 +123,7 @@ h3{
 
 <hr>
 <h3>Contact Us</h3>
+<h4>E-mail: alexan.nader@gmail.com</h4>
 
 
 
