--- a/financeweb/templates/myaccount.html
+++ b/financeweb/templates/myaccount.html
@@ -28,15 +28,13 @@
   <br></br>
   <h>welcome to your finance web page</h> 
   <br></br>
-  <label>Email: {{u.user_email}}</label>
+  <label>Email: {{u.email}}</label>
   <br></br>
   <label>First Name: {{u.first_name}}</label>
   <br></br>
-  <label>Last Name: {{u.Last_name}}</label>
+  <label>Last Name: {{u.last_name}}</label>
   <br></br>
-  <label>Company Name: {{u.company_name}}</label>
-  <br></br>
-  <label>Date of origin: {{u.company_date_of_origin}}</label>
+  <label>Company Name: {{u2.companyname}}</label>
   <br></br>
   <a href="editprofile/{{ u.id }}">Edit your information </a>
 </body>
