--- a/financeweb/templates/home.html
+++ b/financeweb/templates/home.html
@@ -90,7 +90,7 @@ h3{
 <div class="titles">
 
 {% if user.is_authenticated %}
-<a href="myprojects" class="headings">My Projects</a>
+<a href="myprojects/{{ user.id }}" class="headings">My Projects</a>
 {% else %}
 <a href="notauser" class="headings">My Projects</a>
 {% endif %}
