--- a/financeweb/templates/myaccount.html
+++ b/financeweb/templates/myaccount.html
@@ -36,7 +36,7 @@
   <br></br>
   <label>Company Name: {{u2.companyname}}</label>
   <br></br>
-  <a href="editprofile/{{ u.id }}">Edit your information </a>
+  <a href="/myaccount/editprofile/{{ u.id }}">Edit your information </a>
 </body>
 
 </html>
