--- a/financeweb/templates/home.html
+++ b/financeweb/templates/home.html
@@ -102,7 +102,7 @@ h3{
 
 <hr>
 
-<a href="" class="experience">Share Your Experience</a>
+<a href="Allposts" class="experience">Share Your Experience</a>
 
 <div class="box">
 
