--- a/financeweb/templates/myprojects.html
+++ b/financeweb/templates/myprojects.html
@@ -57,6 +57,11 @@
 	{% for p in projects %}
 		{% if u2 == p.client %}
 		<a class="projects" href="viewproject/{{ p.id }}">Project Name: {{ p.pname }}</a>
+
+		<form method='post' action="{% url 'deleteproject' p.id u.id %}">{% csrf_token %}
+		<input type='submit' class="submit" value="Delete">
+		</form>
+
 		<br></br>
 		{% endif %}
 	{% endfor %}
