--- a/financeweb/templates/login.html
+++ b/financeweb/templates/login.html
@@ -15,8 +15,10 @@
             Password: <input type="password" name="password" value="" size="50" />
             <br />
 
-            <input type="submit" value="submit" />
+            <input type="submit" value="Login" />
         </form>
+        <br>
+        <a href="home">Go to Homepage</a>
 
     </body>
 </html>
