I made google search

--- a/financeweb/templates/home.html
+++ b/financeweb/templates/home.html
@@ -137,6 +137,23 @@ h3{
 <h3>Contact Us</h3>
 <h4>E-mail: alexan.nader@gmail.com</h4>
 
+</body>
 
 
+<body>
+
+<form method="get" action="http://www.google.com/search">
+
+<div style="position: absolute; top:400px; left:100px; width:400px; height:40px";">
+<table border="0" align="center" cellpadding="0">
+<tr><td>
+<input type="text"   name="q" size="30" style="color:#808080;"
+maxlength="255" value="Search on Google"
+onfocus="if(this.value==this.defaultValue)this.value=''; this.style.color='black';" onblur="if(this.value=='')this.value=this.defaultValue; "/>
+<input type="submit" value="Go!" />
+<input type="hidden" name="sitesearch"  /></td></tr>
+</table>
+
+</div>
+</form>
 </body>
