delete post is almost done

--- a/financeweb/templates/viewpost.html
+++ b/financeweb/templates/viewpost.html
@@ -20,5 +20,5 @@ body{
       background-size: cover;
       background-position: fixed;
 }
-
+<input type= 'submit' class = "submit" value = "delete"/> 
 </style>
