--- a/financeweb/templates/login.html
+++ b/financeweb/templates/login.html
@@ -17,6 +17,7 @@
 
             <input type="submit" value="submit" />
         </form>
+        <p>Forgot your password? <a href='resetpassword/'>Reset it!</a></p>
 
     </body>
 </html>
