added contact us

--- a/financeweb/templates/home.html
+++ b/financeweb/templates/home.html
@@ -152,7 +152,7 @@ FUN FACT : Bill Gates is 57 this year. If we assume that he will live for anothe
 
 
 <hr>
-<h3>Contact Us</h3>
+<a href="contact_form.html">Contact Us</a>
 <h4>E-mail: alexan.nader@gmail.com</h4>
 <h4>Phone: +201005070969</h4>
 
