--- a/financeweb/templates/viewgrossprofit.html
+++ b/financeweb/templates/viewgrossprofit.html
@@ -3,7 +3,7 @@
 
 	<title>Project {{ project.pname }}</title>
 
-	<h3>Gross Profit</h3>
+	<h3>Overall Net Profit for Project " {{ project.pname }} "</h3>
 	<label>${{ grossprofit }}</label>
 	<br></br>
 	<h3>Gross Profit Date</h3>
