I was trying to send notfication to the user when date=datereminder through making model reminder in models,and funactions in view that stories the messages in a queue

--- a/financeweb/templates/home.html
+++ b/financeweb/templates/home.html
@@ -104,7 +104,7 @@ h3{
 {% endif %}
 <a href="ourfeatures" class="headings">Our Features</a>
 <a href="ourapp" class="headings">Our App</a>
-
+<a href="reminder" class="reminder">reminder</a>
 </div>
 
 
@@ -124,6 +124,7 @@ h3{
 <a href="register" class="text">Register Here</a>
 <br></br>
 <a href="login" class="text">Login</a><br />
+<br></br>
 {% endif %}
 </div>
 
